sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: '<-' expected but ')' found.
		for (i-<getNombreValeurs-1 to 0 by-1) {			 
                                                    ^AlgCocktailSort1:16: error: illegal start of simple expression
		}
                ^